css/style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: "Google Sans Flex", sans-serif;
  scrollbar-width: none;
  -ms-overflow-style: none;
  transition: var(--motion);
  -webkit-tap-highlight-color: transparent;
}

*::-webkit-scrollbar {
  display: none;
}

input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

:root {
  --bg: #f7f7f7;
  --item: #fff;
  --item-hover: #f0f0f0;
  --item-active: #e1e1e1;
  --text: #000;
  --header: #f7f7f7aa;
  --active: #ebebeb;
  --active-hover: #dcdcdc;
  --input: #e8e8e8;
  --divider: #dedede
  --toggle: #e5e5e5;
  --motion: 0.3s ease;
  --filter: blur(15px);
  --opacity: 0;
  --color: #4980f7;
  --color-hover: #3e6fd6;
}

.dark {
  --bg: #000000;
  --item: #242424;
  --item-hover: #353535;
  --item-active: #424242;
  --text: #fff;
  --header: #000000aa;
  --active: #3e3e3e;
  --active-hover: #5d5d5d;
  --input: #242424;
  --divider: #333333;
  --toggle: #505050;
}

.reduced {
  --motion: none !important;
  --filter: none !important;
  --opacity: 1 !important;
  --header: #f7f7f7 !important;
}

.reduced.dark  {
  --motion: none !important;
  --filter: none !important;
  --opacity: 1 !important;
  --header: #000000 !important;
}

/* Global */
body {
  height: 100vh;
  display: flex;
  background: var(--bg);
  scrollbar-width: none;
  -ms-overflow-style: none;
  overflow-y: hidden;
  overflow-x: hidden;
}

input {
  padding: 8px;
  border-radius: 8px;
  background-color: var(--bg);
  border: none;
  color: var(--text);
  outline: solid 2px #4980f700;
  transition: outline 0.3s ease;
  height: 2rem;
  width: 100%;
}

textarea {
  padding: 8px;
  border-radius: 8px;
  background-color: var(--bg);
  border: none;
  color: var(--text);
  outline: solid 2px #4980f700;
  transition: outline 0.3s ease;
  width: 100%;
  resize: none;
  overflow: hidden;
  max-height: 5rem;
}

input:focus, textarea:focus {
  display: flex;
  outline: solid 2px var(--color);
}

button {
  padding: 8px 12px;
  border: none;
  color: #fff;
  background-color: var(--color);
  border-radius: 8px;
  cursor: pointer;
}

ul {
  list-style-position: inside;
}

a {
  color: var(--color);
  text-decoration: none;
}

form {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

/* Sidebar */
.sidebar {
  width: 350px;
  background: var(--bg);
  display: flex;
  flex-direction: column;
  gap: 20px;
  padding: 85px 20px;
  height: 100vh;
  border-right: var(--divider) 1px solid;
  overflow: auto;
}

.logo {
  position: fixed;
  margin: -85px -20px;
  z-index: 1;
  height: 85px;
  width: 349px;
  background: var(--header);
  padding-top: 40px;
  padding-left: 20px;
  backdrop-filter: var(--filter);
}

.logo span {
  font-size: 25px;
  color: var(--text);
}

.nav {
  display: block;
  flex-direction: column;
  width: 100%;
  background-color: var(--item);
  border-radius: 15px;
  overflow-y: hidden;
  height: fit-content;
  flex-shrink: 0;
}

.nav a, .bar-extra, .nav span {
  display: flex;
  width: 100%;
  padding: 15px;
  font-size: 15px;
  line-height: 25px;
  color: var(--text);
  text-decoration: none;
  cursor: pointer;
  font-weight: bold;
}

span#active {
  background: var(--active);
}

span#active:hover {
  background: var(--active-hover);
}

.nav a:not(#active):hover, .bar-extra:hover, .nav span:not(#active):active {
  background: var(--item-hover);
}

.nav a:not(#active):active, .bar-extra:active, .nav span:not(#active):active {
  background: var(--item-active);
}

.nav div {
  height: 25px;
  width: 25px;
  background: var(--color);
  margin-right: 10px;
  border-radius: 5px;
  display: none;
}

/* Layout */
.layout {
  flex: 1;
  display: flex;
  overflow-y: auto;
}

.content {
  position: relative;
  background: var(--bg);
  color: #111;
  padding: 85px 50px;
  min-height: 100%;
  width: 100%;
  overflow: auto;
}

.section {
  position: relative;
  font-size: 12px;
  color: var(--text);
  opacity: 0.5;
  margin: 0 auto 5px auto;
  font-weight: normal;
  width: 100%;
  max-width: 700px;
  left: 10px;
}

.footer {
  font-size: 12px;
  color: var(--text);
  opacity: 0.5;
  text-align: center;
}

.page {
  position: fixed;
  margin: -85px -50px;
  z-index: 1;
  height: 85px;
  width: calc(100% - 350px);
  text-align: center;
  background: var(--header);
  padding-top: 40px;
  backdrop-filter: var(--filter);
}

.page h1 {
  font-size: 25px;
  color: var(--text);
  font-weight: normal;
}

.ui {
  overflow: hidden;
  width: 20px;
  top: 20px;
  height: 20px;
  position: fixed;
  z-index: 2;
  display: flex;
  justify-content: space-between;
}

button#back, button#openModal {
  padding: 0;
  border: none;
  color: var(--text);
  background-color: transparent;
  border-radius: 0;
}

.mobile-back {
  display: none;
}

.add-event {
  display: block;
  width: auto;
  height: 100%;
  z-index: 2;
  cursor: pointer;
  flex-shrink: 0;
  flex: 0 0 20px;
}

.dark .add-event {
  filter: invert(1);
}

/* Event Grid */
.event-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  gap: 20px;
  margin-bottom: 10px;
}

@media (max-width: 600px) {
  .event-grid {
    grid-template-columns: 1fr;
  }
}

/* Modal */
.modal-overlay {
  position: fixed;
  inset: 0;
  background: #00000050;
  display: flex;
  align-items: center;
  justify-content: center;
  backdrop-filter: var(--filter);
  opacity: var(--opacity);
  color: var(--text);
  z-index: 2;
  animation: fadeIn 0.2s ease forwards;
}

.modal {
  background: var(--bg);
  padding: 15px;
  width: 300px;
  display: flex;
  flex-direction: column;
  gap: 10px;
  border-radius: 25px;
  outline: solid 1px var(--item);
}

.modal input, .modal textarea {
  padding: 12px;
  height: 40px;
  border-radius: 12px;
  background-color: var(--input);
}

.modalTitle {
  font-size: 20px;
  color: var(--text)
}

.fielderror {
  outline: solid 2px #E92C2C !important;
}
/* ... */

